Added Bookamrk feature Code Modification

--- a/app/src/main/res/layout/activity_search.xml
+++ b/app/src/main/res/layout/activity_search.xml
@@ -53,6 +53,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginEnd="@dimen/dp_10"
+                    android:visibility="gone"
                     android:src="@drawable/search_btn"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
@@ -84,7 +85,7 @@
             android:paddingStart="@dimen/dp_5"
             android:paddingEnd="@dimen/recycler_view_padding"
             android:visibility="gone"
-            app:layout_constraintDimensionRatio="H,2:1"
+            app:layout_constraintDimensionRatio="H,2:1.3"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@+id/view" />
@@ -99,15 +100,16 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/bookmark_rsv" />
 
+
         <TextView
             android:id="@+id/error_text"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="@dimen/dp_5"
+            android:text="@string/error_text"
             android:textColor="@color/black"
             android:textSize="@dimen/sp_22"
             android:visibility="gone"
-            android:text="@string/error_text"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -118,10 +120,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:visibility="gone"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintBottom_toBottomOf="@+id/searched_rsv"
+            app:layout_constraintEnd_toEndOf="@+id/searched_rsv"
+            app:layout_constraintStart_toStartOf="@+id/searched_rsv"
+            app:layout_constraintTop_toTopOf="@+id/searched_rsv" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
